--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -34,4 +34,5 @@
   background-color: var(--color-light);
   padding: var(--space-500);
   max-width: 736px;
+  width: 100%;
 }
