--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -18,6 +18,7 @@
 .checkbox svg {
   margin: 3px;
   transition: transform 0.1s;
+  flex-shrink: 0;
 }
 
 .checkbox svg .square {
@@ -84,6 +85,7 @@
   margin: 2.25px;
   transition: transform 0.1s;
   color: var(--color-primary);
+  flex-shrink: 0;
 }
 
 .radio input[type="radio"]:not(:checked) + svg .outer {
@@ -142,6 +144,13 @@ textarea {
   font-size: var(--text-m);
   padding: var(--space-150) var(--space-300);
   color: var(--color-dark);
+  line-height: var(--leading-loose);
+}
+
+textarea {
+  height: var(--fluid-240-105);
+  min-height: 105px;
+  resize: vertical;
 }
 
 @media (hover: hover) {
